[gd_scene load_steps=10 format=1]

[ext_resource path="res://level/LevelOne.gd" type="Script" id=1]
[ext_resource path="res://level/assets/SPACEMAN.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://level/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.85098, 0.0666667, 0.0666667, 1 )
light_color = Color( 0.851562, 0.0698547, 0.0698547, 1 )
dark_color = Color( 0.851562, 0.0698547, 0.0698547, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.453125, 0.453125, 0.453125, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=3]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 120, 168 )

[node name="Level" type="Node2D"]

script/script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 25, 25 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="HealthBar" type="ProgressBar" parent="UI"]

hint/tooltip = "Health"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -1.0
margin/top = -1.0
margin/right = 119.0
margin/bottom = 23.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="HealthLabel" type="Label" parent="UI/HealthBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -1.0
margin/right = 120.0
margin/bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.957031, 0.915909, 0.915909, 1 )
text = "Health"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AmmoLabel" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -1.0
margin/top = 23.0
margin/right = 95.0
margin/bottom = 47.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.808594, 0.808594, 0.808594, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "ammo:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AmmoValueLabel" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 95.0
margin/top = 23.0
margin/right = 191.0
margin/bottom = 47.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.487061, 0.875, 0.0991211, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "10"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreLabel" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 791.0
margin/top = -1.0
margin/right = 887.0
margin/bottom = 23.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.808594, 0.808594, 0.808594, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "score:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreValueLabel" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 887.0
margin/top = -1.0
margin/right = 983.0
margin/bottom = 23.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.703125, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "10"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Navigation" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navigation"]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 48, 48 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -589819, -1073741821, -589818, 2, -589817, 2, -589816, 2, -589815, 2, -589814, 2, -589813, 2, -589812, 2, -589811, 2, -589810, 2, -589809, 2, -589808, 2, -589807, 2, -589806, 2, -589805, 2, -589804, -536870909, -524283, -1073741822, -524282, -536870908, -524281, -536870908, -524280, -536870908, -524279, -536870908, -524278, -536870908, -524277, -536870908, -524276, -536870908, -524275, -536870908, -524274, -536870908, -524273, -536870908, -524272, -536870908, -524271, -536870908, -524270, -536870908, -524269, -536870908, -524268, -536870910, -458747, -1073741822, -458746, -536870908, -458745, -536870908, -458744, -536870908, -458743, -536870908, -458742, -536870908, -458741, -536870908, -458740, -536870908, -458739, -536870908, -458738, -536870908, -458737, -536870908, -458736, -536870908, -458735, -536870908, -458734, -536870908, -458733, -536870908, -458732, -536870910, -393211, -1073741822, -393210, -536870908, -393209, -536870908, -393208, -536870908, -393207, -536870908, -393206, -536870908, -393205, -536870908, -393204, -536870908, -393203, -536870908, -393202, -536870908, -393201, -536870908, -393200, -536870908, -393199, -536870908, -393198, -536870908, -393197, -536870908, -393196, -536870910, -327675, -1073741822, -327674, -536870908, -327673, -536870908, -327672, -536870908, -327671, -536870908, -327670, -536870908, -327669, -536870908, -327668, -536870908, -327667, -536870908, -327666, -536870908, -327665, -536870908, -327664, -536870908, -327663, -536870908, -327662, -536870908, -327661, -536870908, -327660, -536870910, -262139, -1073741822, -262138, -536870908, -262137, -536870908, -262136, -536870908, -262135, -536870908, -262134, -536870908, -262133, -536870908, -262132, -536870908, -262131, -536870908, -262130, 1073741825, -262129, 1610612738, -262128, 1610612738, -262127, 1610612738, -262126, 1610612738, -262125, 1610612738, -262124, -1610612733, -196603, -2147483645, -196602, 1610612738, -196601, 1610612738, -196600, 1610612738, -196599, 1610612737, -196598, -536870908, -196597, -536870908, -196596, -536870908, -196595, -536870908, -196594, -536870910, -131063, -1073741822, -131062, -536870908, -131061, -536870908, -131060, -536870908, -131059, -536870908, -131058, -536870910, -65536, -1073741821, -65535, 2, -65534, 2, -65533, 2, -65532, 2, -65531, 2, -65530, -536870909, -65527, -1073741822, -65526, -536870908, -65525, -536870908, -65524, -536870908, -65523, -536870908, -65522, -536870910, 0, -2147483646, 1, 4, 2, 4, 3, 4, 4, 4, 5, 4, 6, -536870910, 9, -1073741822, 10, -536870908, 11, -536870908, 12, -536870908, 13, -536870908, 14, -536870910, 65536, -2147483646, 65537, 4, 65538, 4, 65539, 4, 65540, 4, 65541, 4, 65542, -536870911, 65543, 2, 65544, 2, 65545, 536870913, 65546, -536870908, 65547, -536870908, 65548, -536870908, 65549, -536870908, 65550, -536870911, 65551, 2, 65552, -536870909, 131072, -2147483646, 131073, 4, 131074, 4, 131075, 4, 131076, 4, 131077, 4, 131078, -536870908, 131079, -536870908, 131080, -536870908, 131081, -536870908, 131082, -536870908, 131083, -536870908, 131084, -536870908, 131085, -536870908, 131086, -536870908, 131087, -536870908, 131088, -536870910, 196608, -2147483646, 196609, 4, 196610, 4, 196611, 4, 196612, 4, 196613, 4, 196614, -536870908, 196615, -536870908, 196616, -536870908, 196617, -536870908, 196618, -536870908, 196619, -536870908, 196620, -536870908, 196621, -536870908, 196622, -536870908, 196623, -536870908, 196624, -536870910, 262144, -2147483646, 262145, 4, 262146, 4, 262147, 4, 262148, 4, 262149, 4, 262150, 1073741825, 262151, 1610612738, 262152, 1610612737, 262153, -536870908, 262154, -536870908, 262155, -536870908, 262156, -536870908, 262157, -536870908, 262158, -536870908, 262159, -536870908, 262160, -536870910, 327680, -2147483646, 327681, 4, 327682, 4, 327683, 4, 327684, 4, 327685, 4, 327686, -536870910, 327688, -1073741822, 327689, -536870908, 327690, -536870908, 327691, -536870908, 327692, -536870908, 327693, -536870908, 327694, -536870908, 327695, -536870908, 327696, -536870910, 393216, -2147483646, 393217, 4, 393218, 4, 393219, 4, 393220, 4, 393221, 4, 393222, -536870910, 393224, -1073741822, 393225, -536870908, 393226, -536870908, 393227, -536870908, 393228, -536870908, 393229, -536870908, 393230, -536870908, 393231, -536870908, 393232, -536870910, 458752, -2147483645, 458753, 1610612738, 458754, 1610612738, 458755, 1610612738, 458756, 1610612738, 458757, 1610612738, 458758, -1610612733, 458760, -1073741822, 458761, -536870908, 458762, -536870908, 458763, -536870908, 458764, -536870908, 458765, -536870908, 458766, -536870908, 458767, -536870908, 458768, -536870910, 524296, -1073741822, 524297, -536870908, 524298, -536870908, 524299, -536870908, 524300, -536870908, 524301, -536870908, 524302, -536870908, 524303, -536870908, 524304, -536870910, 589832, -1073741822, 589833, -536870908, 589834, -536870908, 589835, -536870908, 589836, -536870908, 589837, -536870908, 589838, -536870908, 589839, -536870908, 589840, -536870910, 655368, -2147483645, 655369, 1610612738, 655370, 1610612738, 655371, 1610612738, 655372, 1610612738, 655373, 1610612738, 655374, 1610612738, 655375, 1610612738, 655376, -1610612733 )

[node name="Player" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 122.094, 60.2935 )

[node name="RoomOne" type="Area2D" parent="." groups=[
"room",
]]

transform/pos = Vector2( 79.9999, 33 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 88.0001, 135 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomOne"]

transform/pos = Vector2( 88.0001, 135 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="spawn" type="Position2D" parent="RoomOne" groups=[
"spawn",
]]

transform/pos = Vector2( -9.51724, 278.389 )

[node name="spawn1" type="Position2D" parent="RoomOne" groups=[
"spawn",
]]

transform/pos = Vector2( 184, -8.99998 )


